<resources>
    <string name="app_name">Avi Sail Race</string>
    <string name="action_settings">Settings</string>
    <string name="dlg_location_error">Error with location</string>
    <string name="dlg_ok">OK</string>
    <string name="dlg_cancel">Cancel</string>
    <string name="inline_preferences">title1</string>
    <string name="title_checkbox_preference">checkboxtitle2</string>
    <string name="summary_checkbox_preference">summary</string>
    <string name="dialog_based_preferences">dialog</string>
    <string name="title_edittext_preference">title 3</string>
    <string name="summary_edittext_preference">title4</string>
    <string name="dialog_title_edittext_preference">dialog2</string>
    <string name="title_list_preference">title5</string>
    <string name="summary_list_preference">summary 2</string>
    <string name="dialog_title_list_preference">dialog</string>
    <string name="launch_preferences">launce</string>
    <string name="title_fragment_preference">title10</string>
    <string name="summary_fragment_preference">sammary2</string>
    <string name="title_intent_preference">titleintent</string>
    <string name="summary_intent_preference">sumamry intent</string>
    <string name="preference_attributes">atribs</string>
    <string name="title_parent_preference">titlae parent</string>
    <string name="summary_parent_preference">sammary parent</string>
    <string name="title_child_preference">titlechild</string>
    <string name="summary_child_preference">sammary child</string>
    <string name="cancelbutton">Cancel</string>
    <string name="okbutton">OK</string>
    <string name="downloadnowbutton">OK</string>
    <string name="rotate_button">Rotate</string>
    <string name="zoomin_button">+</string>
    <string name="zoomout_button">-</string>
    <string name="latitude">Latitude</string>
    <string name="longitude">Longitude</string>
    <string name="zoomlevel">Zoom Level</string>
    <string name="preferences_scale">Display Scale</string>
    <string name="preferences_scale_desc">Adjust scale of the map display</string>
    <string name="preferences_scalebar">Scale bar</string>
    <string name="preferences_scalebar_desc">Set units system on the scale bar</string>
    <string name="preferences_textwidth">Maximum Textwidth</string>
    <string name="preferences_textwidth_desc">Debugging aid for setting maximum textwidth</string>
    <string name="preferences_category_wayfiltering">Way filtering</string>
    <string name="preferences_wayfiltering">Way filtering</string>
    <string name="preferences_wayfiltering_desc">Way filtering reduces the number of ways returned at the risk of clipping artifacts.</string>
    <string name="preferences_wayfiltering_distance">Way filter size</string>
    <string name="preferences_wayfiltering_distance_desc">The higher the number the less artifacts, but slower.</string>
    <string name="preferences_category_tilecache">Tilecache</string>
    <string name="preferences_tilecache_persistence">Persistence</string>
    <string name="preferences_tilecache_persistence_desc">Keep tiles over activity restart.</string>
    <string name="preferences_tilecache_threading">Threading</string>
    <string name="preferences_tilecache_threading_desc">Threading makes the app more responsive, with some risk.</string>
    <string name="preferences_tilecache_queuelimit">Queue limit</string>
    <string name="preferences_tilecache_queuelimit_desc">The higher the limit, the more memory is needed. Risk of OOM.</string>
    <string name="preferences_debug_timing">Debug timing</string>
    <string name="preferences_debug_timing_desc">Measure rendering time</string>
    <string name="preferences_rendering_threads">Number of threads to render concurrently</string>
    <string name="preferences_rendering_threads_desc">Minimum 1</string>
    <string name="preferences_r4_emergency">Emergency</string>
    <string name="preferences_r4_emergency_desc">Show hospitals, doctors, police etc</string>
    <string name="preferences_r4_accommodation">Accommodation</string>
    <string name="preferences_r4_accommodation_desc">Show hostels, guesthouses, campsites etc</string>
    <string name="preferences_r4_tourism_poi">Tourism</string>
    <string name="preferences_r4_tourism_poi_desc">Show points of interest</string>
    <string name="preferences_r4_shopping">Shopping</string>
    <string name="preferences_r4_shopping_desc">Show shops</string>
    <string name="preferences_r4_amenities">Amenities</string>
    <string name="preferences_r4_amenities_desc">Show amenities???</string>
    <string name="preferences_r4_public_transport">Transport</string>
    <string name="preferences_r4_public_transport_desc">Show transport</string>
    <string name="preferences_r4_food">Food</string>
    <string name="preferences_r4_food_desc">Show restaurants</string>
    <string name="preferences_r4_traffic">Traffic</string>
    <string name="preferences_r4_traffic_desc">Show traffic/transport??</string>
    <string name="preferences_r4_barriers">Barriers</string>
    <string name="preferences_r4_barriers_desc">Show barriers</string>
    <string name="preferences_r4_sports">Sports</string>
    <string name="preferences_r4_sports_desc">Show sports facilities</string>
    <string name="preferences_r4_places">Places</string>
    <string name="preferences_r4_places_desc">Show place names</string>
    <string name="preferences_r4_buildings">Buildings</string>
    <string name="preferences_r4_buildings_desc">Show buildings</string>
    <string name="preferences_r4_nature">Nature</string>
    <string name="preferences_r4_nature_desc">Show natural items</string>
    <string name="preferences_r4_areas">Areas</string>
    <string name="preferences_r4_areas_desc">Show areas</string>
    <string name="preferences_r4_roads">Roads</string>
    <string name="preferences_r4_roads_desc">Show roads</string>
    <string name="preferences_r4_waterbodies">Water</string>
    <string name="preferences_r4_waterbodies_desc">Show lakes, rivers etc</string>
    <string name="dialog_location_title">Coordinates</string>
    <string name="startup_dontshowagain">Don\'t show again</string>
    <string name="startup_message">To run this samples app, you need any map with filename germany.map installed on the sdcard.</string>
    <string name="startup_message_tilestore">To run this sample activity, you need a TMS tile store at /sdcard/tilestore. Sample data in the Samples/data directory.</string>
    <string name="startup_message_multimap">To run this sample activity, you need to download a low-resolution world map first.</string>
    <string name="menu_preferences">Settings</string>
    <string name="menu_position_enter_coordinates">Map Position</string>
    <string name="menu_svgclear">Clear SVG icon cache</string>
    <string name="title_activity_google_maps">Map</string>
    <string name="dir">Direction</string>
    <string name="dist">Distance(nautical miles)</string>
    <string name="title_activity_choose_event">ChooseEvent</string>
    <string name="action_add">Add</string>
    <string name="action_add_race_course">Add Race Course</string>
    <string name="action_exit">Exit</string>
    <string name="action_assign">Assign buoys</string>
    <string name="apply_button_text">Apply</string>
    <string name="cancel_button_text">Cancel</string>
    <string name="set_race_course">Set Race Course</string>
    <string name="course_type">COURSE TYPE</string>
    <string name="wind_direction">WIND DIRECTION</string>
    <string name="distance">DISTANCE</string>
    <string name="choose_class">Choose Class</string>
    <string name="wind_speed">Wind Speed</string>
    <string name="target_time">Target Time</string>
    <string name="number_of_boats">Number of boats</string>
    <string name="gate_width_boat_lengths">Gate width (Boat lengths)</string>
    <string name="na">NA</string>
    <string name="minus_sign">—</string>
    <string name="plus_sign">+</string>
    <string name="course_statistics_button">Statistics</string>
</resources>