<?xml version="1.0" encoding="utf-8"?>
<menu xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto">
    <!-- "Mark Favorite", should appear as action button if possible -->
    <item
        android:id="@+id/action_settings"
        android:icon="@drawable/ic_menu_preferences"
        android:title="@string/action_settings"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_add_race_course"
        android:icon="@mipmap/ic_race_course"
        android:title="@string/action_add_race_course"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_add_object"
        android:icon="@drawable/ic_add_black_48dp"
        android:title="@string/action_add"
        app:showAsAction="ifRoom"/>
    <item android:id="@+id/action_assign_buoys"
        android:title="@string/action_assign"
        app:showAsAction="never"/>
    <item android:id="@+id/action_exit"
        android:title="@string/action_exit"
        app:showAsAction="never"/>

</menu>