<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:layout_centerInParent="true"
    android:layout_margin="15dp"
    android:orientation="vertical">

<TextView
    android:layout_width="wrap_content"
    android:layout_height="wrap_content"
    android:text="@string/set_race_course"
    android:textColor="@color/cmark_gray"
    android:textStyle="bold"
    android:textSize="25sp"
    android:layout_margin="15dp"
    android:layout_gravity="center"/>
    <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="horizontal"
        android:layout_gravity="center_horizontal">
        <LinearLayout
        android:layout_width="wrap_content"
        android:layout_height="wrap_content"
        android:orientation="vertical">
        <Button
            android:id="@+id/coursetype_input_button"
            android:layout_width="90dp"
            android:layout_height="90dp"
            android:background="@mipmap/ic_race_course"
            android:layout_gravity="center_horizontal" />
        <TextView
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:text="@string/course_type"
            android:textStyle="bold"
            android:layout_margin="5dp"
            android:gravity="bottom|center_horizontal"
            android:textColor="@color/cmark_orange_darker"
            android:layout_gravity="center_horizontal" />
    </LinearLayout>
        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical"
            android:layout_gravity="bottom">
            <Button
                android:id="@+id/winddir_input_button"
                android:layout_width="90dp"
                android:layout_height="80dp"
                android:background="@drawable/arrow"
                android:layout_gravity="center_vertical|center_horizontal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/wind_direction"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:gravity="bottom|center_horizontal"
                android:textColor="@color/cmark_orange_darker"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>

        <LinearLayout
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:orientation="vertical">
            <Button
                android:id="@+id/distance_input_button"
                android:layout_width="90dp"
                android:layout_height="90dp"
                android:background="@mipmap/distance"
                android:layout_gravity="center_horizontal" />
            <TextView
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:text="@string/distance"
                android:textStyle="bold"
                android:layout_margin="5dp"
                android:gravity="bottom|center_horizontal"
                android:textColor="@color/cmark_orange_darker"
                android:layout_gravity="center_horizontal" />
        </LinearLayout>
    </LinearLayout>


    <LinearLayout
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:orientation="vertical"
        android:layout_gravity="center">

        <Button
            android:id="@+id/apply_race_course_input_button"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:background="@color/cmark_blue_light"
            android:text="@string/apply_button_text"
            android:textColor="@color/cmark_orange_light"
            android:textStyle="bold" />
    <Button
        android:id="@+id/cancel_race_course_input_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/cmark_blue_light"
        android:textColor="@color/cmark_orange_light"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/cancel_button_text" />
    <Button
        android:id="@+id/course_statistics_button"
        android:layout_width="fill_parent"
        android:layout_height="wrap_content"
        android:background="@color/cmark_blue_light"
        android:textColor="@color/cmark_orange_light"
        android:textStyle="bold"
        android:layout_marginTop="10dp"
        android:text="@string/course_statistics_button" />

        <Button
            android:id="@+id/course_select_button"
            android:layout_width="fill_parent"
            android:layout_height="wrap_content"
            android:background="@color/cmark_blue_light"
            android:textColor="@color/cmark_orange_light"
            android:textStyle="bold"
            android:layout_marginTop="10dp"
            android:text="@string/course_statistics_button" />
    </LinearLayout>
</LinearLayout>